SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in future snapshots and releases.
===============================================================================================

Enhancements:

The minimum number of decimal digits of floating point numbers can now be defined
  (see menu File --> Global Preferences --> Tab 'Data Type Controls --> section 'FLOAT, REAL, ...')
 Thanks to Krzysztof Szymko for the patch.


The limit string loading size option (see menu File --> Global Preferences --> Tab 'Data Type Controls --> section 'CHAR, VARCHAR, ...')
  used to work for the Object tree only and now works for SQLs too.
  Furthermore limited strings are now indicated by the ending '...'.
 Thanks to Krzysztof Szymko for the patch.


Table types shown in Object tree can now be filtered, see menu File --> New Session Properties --> tab Object tree --> section Filters

#470 New global preference to auto-save current SQL commands into file at exit and auto-reload them at startup into SQL editor pane.
  See menu File --> Global Preferences --> Tab SQL --> Check box --> Section General
 Thanks to Krzysztof Szymko for the patch.


The Logs window now remembers its size.


Dataimport Plugin:
 - Improved messaging
 - Table refresh after import
 Thanks to Krzysztof Szymko for the patch.


Bookmarks Plugin: It's now possible to define default values for parameters.
   Here is an extract from updated the SQLBookmark-Plugin help:
     In case you want to give a default value for a parameter the syntax would be ${prompt[, tip](defaultValue)}.<BR>
     Also a list of predefined values is possible. The syntax then is ${prompt[, tip](defaultValue_1|defaultValue_2|defaultValue_3)}
   Thanks to Krzysztof Szymko for the patch.

Comment/uncomment short cuts (ctrl minus / ctrl shift minus) now work with Numpad-minus too.
