@@ -36,6 +36,7 @@ TablePopupMenu.copy=Copy
 TablePopupMenu.copyWithHeaders=Copy with headers
 TablePopupMenu.copyashtml=Copy as HTML
 TablePopupMenu.copyaligned=Copy aligned (as in 'Results as text' tab)
+TablePopupMenu.copyasmarkdown=Copy as markdown table
 TablePopupMenu.copyaswikitable=Copy as WIKI table
 TablePopupMenu.copyaswikitableSpecific=Copy as WIKI table ({0})
 TablePopupMenu.copyasinstatement=Copy as SQL IN statement
@@ -67,3 +68,4 @@ TablePopupMenu.copycolumnheader=Copy column names
 TablePopupMenu.showRefernces=Show foreign key references ...
 
 TableCopyAlignedCommand.failed.to.copy=Copy aligned failed because of missing exact column definition.
+TableCopyAsMarkdownCommand.failed.to.copy=Copy as markdown failed because of missing exact column definition.
