@@ -3,25 +3,28 @@ package net.sourceforge.squirrel_sql.fw.gui;
 import net.sourceforge.squirrel_sql.client.session.ISession;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.ColumnDisplayDefinition;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.ExtTableColumn;
+import net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.BaseDataTypeComponent;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.textdataset.ResultAsText;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.textdataset.ResultAsTextLineCallback;
 import net.sourceforge.squirrel_sql.fw.util.StringManager;
 import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
+import net.steppschuh.markdowngenerator.table.Table;
 
 import javax.swing.*;
 import javax.swing.table.TableColumn;
 import java.awt.*;
 import java.awt.datatransfer.StringSelection;
 import java.util.ArrayList;
+import java.util.Arrays;
 
-public class TableCopyAlignedCommand
+public class TableCopyAsMarkdownCommand
 {
-   private static final StringManager s_stringMgr = StringManagerFactory.getStringManager(TableCopyAlignedCommand.class);
+   private static final StringManager s_stringMgr = StringManagerFactory.getStringManager(TableCopyAsMarkdownCommand.class);
 
-   private JTable _table;
-   private ISession _session;
+   private final ISession _session;
+   private final JTable _table;
 
-   public TableCopyAlignedCommand(JTable table, ISession session)
+   public TableCopyAsMarkdownCommand(JTable table, ISession session)
    {
       _session = session;
       _table = table;
@@ -45,7 +48,7 @@ public class TableCopyAlignedCommand
          }
          else
          {
-            _session.showErrorMessage(s_stringMgr.getString("TableCopyAlignedCommand.failed.to.copy"));
+            _session.showErrorMessage(s_stringMgr.getString("TableCopyAsMarkdownCommand.failed.to.copy"));
             return;
          }
       }
@@ -53,17 +56,17 @@ public class TableCopyAlignedCommand
 
       ColumnDisplayDefinition[] colDefs = columnDisplayDefinitions.toArray(new ColumnDisplayDefinition[columnDisplayDefinitions.size()]);
 
-      final StringBuffer text = new StringBuffer();
-      ResultAsTextLineCallback resultAsTextLineCallback = new ResultAsTextLineCallback()
-      {
-         @Override
-         public void addLine(String line)
-         {
-            text.append(line);
-         }
-      };
+      String[] colNames = new String[colDefs.length];
 
-      ResultAsText resultAsText = new ResultAsText(colDefs, true, resultAsTextLineCallback);
+      for (int i = 0; i < colDefs.length; i++)
+      {
+         colNames[i] = colDefs[i].getColumnName();
+      }
+
+
+
+      Table.Builder tableBuilder = new Table.Builder();
+      tableBuilder.addRow(colNames);
 
       for (int rowIdx = 0; rowIdx < nbrSelRows; ++rowIdx)
       {
@@ -73,14 +76,33 @@ public class TableCopyAlignedCommand
          for (int colIdx = 0; colIdx < nbrSelCols; ++colIdx)
          {
             Object cellObj = _table.getValueAt(selRows[rowIdx], selCols[colIdx]);
-            row[curIx] = cellObj;
+
+            if(cellObj instanceof String && -1 < ((String)cellObj).indexOf('\n'))
+            {
+               int lineBreakPos = ((String)cellObj).indexOf('\n');
+               row[curIx] = ((String)cellObj).substring(0, lineBreakPos);
+            }
+            else if(null == cellObj)
+            {
+               row[curIx] = BaseDataTypeComponent.NULL_VALUE_PATTERN;
+            }
+            else
+            {
+               row[curIx] = cellObj;
+            }
             ++curIx;
          }
 
-         resultAsText.addRow(row);
+         tableBuilder.addRow(row);
       }
 
-      StringSelection ss = new StringSelection(text.toString());
+      String markdownTable = tableBuilder.build().toString();
+
+      int width = markdownTable.indexOf('\n');
+
+      String line = new String(new char[width]).replace('\0', '-') + "\n";
+
+      StringSelection ss = new StringSelection(line + markdownTable + "\n" + line);
       Toolkit.getDefaultToolkit().getSystemClipboard().setContents(ss, ss);
    }
 }
